--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.3",
+    "@emailjs/browser": "^4.3.3",
     "antd": "^5.15.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
